--- a/item-reader/src/main/resources/application.properties
+++ b/item-reader/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.batch.jdbc.initialize-schema=embedded
 spring.sql.init.mode=embedded
 spring.sql.init.platform=h2
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
