--- a/item-reader/src/test/resources/application-test.properties
+++ b/item-reader/src/test/resources/application-test.properties
@@ -1,5 +1,12 @@
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=sa
+spring.datasource.password=
 spring.sql.init.mode=always
 spring.sql.init.platform=h2
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.mongodb.embedded.version=3.5.5
+logging.level.de.flapdoodle=debug
+logging.level.org.springframework.data.mongodb=debug
