--- a/item-reader/src/test/resources/application-test.properties
+++ b/item-reader/src/test/resources/application-test.properties
@@ -8,5 +8,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.mongodb.embedded.version=3.5.5
+# \uB450 \uBC88 \uC2E4\uD589 \uB418\uB294 \uAC83 \uBC29\uC9C0
+spring.batch.job.enabled=false
+spring.batch.job.names=
 logging.level.de.flapdoodle=debug
 logging.level.org.springframework.data.mongodb=debug
